Adds simple styling to Nav

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
+.flex{
+  display: flex;
+}
+
+.flex-half{
+  flex-basis: calc(100% / 2);
+}
+
+.width-full{
+  width: 100%;
+}
+
+.justify-space-evenly{
+  justify-content: space-evenly;
+}
+
+.justify-space-between{
+  justify-content: space-between;
+}
+
+.border{
+  border: 2px black solid;
+}
+
+.border-rad-5{
+  border-radius: 5px;
+}
+
+.border-right{
+  border-right: solid 2px;
+}
+
+.border-white{
+  border-color: white;
+}
+
+.text-center{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-plain{
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg-blue{
+  background-color: #284B63;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.active{
+  background-color: #0b2b3f;
+}
+
+.text-white{
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
