Adds placeholder for logo, name, and styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+
+
+.header-name{
+  line-height: 50px;
+  font-size: 40px;
+}
+
+.margin-right{
+  margin-right: 5px;
+}
+
 .flex{
   display: flex;
 }
@@ -19,7 +30,11 @@
 }
 
 .border{
-  border: 2px black solid;
+  border: 2px solid;
+}
+
+.circle{
+  border-radius: 50%;
 }
 
 .border-rad-5{
@@ -46,10 +61,19 @@
   background-color: #284B63;
 }
 
+.bg-black{
+  background-color: #353535;
+}
+
 .active{
   background-color: #0b2b3f;
 }
 
 .text-white{
   color: white;
+}
+
+.logo{
+  width: 50px;
+  height: 50px;
 }
