--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   max-height: 200px;
 }
 
+.max-width-100{
+  max-width: 100px;
+}
+
 .header-name{
   font-size: 40px;
 }
@@ -24,6 +28,10 @@
   margin-right: 5px;
 }
 
+.margin-5{
+  margin: 5px;
+}
+
 .pad-10h{
   padding-left: 10px;
   padding-right: 10px;
@@ -33,12 +41,24 @@
   display: flex;
 }
 
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
 .flex-grow{
   flex-grow: 1;
 }
 
 .flex-half{
+  flex-basis: calc(100% / 2 - 10px);
+}
+
+.nav-half{
   flex-basis: calc(100% / 2);
+}
+
+.col{
+  flex-direction: column;
 }
 
 .width-full{
@@ -51,6 +71,14 @@
 
 .justify-space-between{
   justify-content: space-between;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.align-items-center{
+  align-items: center;
 }
 
 .border{
@@ -94,8 +122,12 @@
   color: white;
 }
 
+.text-black{
+  color: black;
+}
+
 .bg-blue{
-  background-color: #284B63;
+  background-color: #0b2b3f;
 }
 
 .bg-white{
@@ -107,11 +139,16 @@
 }
 
 .active{
-  background-color: #0b2b3f;
+  background-color: #284B63;
 }
 
 
 .logo{
   width: 50px;
   height: 50px;
+}
+
+.project-container{
+  height: 200px;
+  width: 150px;
 }
