Fixes typo, adds responsive design to header

--- a/src/App.css
+++ b/src/App.css
@@ -156,3 +156,18 @@
   height: 200px;
   width: 150px;
 }
+
+@media (max-width: 500px)
+{
+  .mobile{
+    display: none;
+  }
+}
+
+@media (max-width: 370px)
+{
+  .stack{
+    align-content: center;
+    flex-direction: column;
+  }
+}
