--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
 }
 
 .flex-half{
-  flex-basis: calc(100% / 2 - 10px);
+  flex-basis: calc(100% / 2 - 14px);
 }
 
 .nav-half{
@@ -100,6 +100,14 @@
 
 .border-white{
   border-color: white;
+}
+
+.border-grey{
+  border-color: #353535;
+}
+
+.shadow{
+  box-shadow: 2px 2px #353535;
 }
 
 .text-center{
