Removes interests from about, readjusts RWD

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   max-width: 100px;
 }
 
+.max-width-380{
+  max-width: 380px;
+}
+
+.min-width-300{
+  min-width: 300px;
+}
+
 .header-name{
   font-size: 40px;
 }
